--- a/maillibrary/src/main/AndroidManifest.xml
+++ b/maillibrary/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.simple.app.maillibrary" />
+    package="com.simple.mail.maillibrary" />
